--- a/.github/workflows/Portal_Dev.yml
+++ b/.github/workflows/Portal_Dev.yml
@@ -13,18 +13,16 @@ jobs:
         node-version: '10.x'
 
     - name: Install Salesforce CLI
-      run: |
-        npm install sfdx-cli -g
-        node_modules/sfdx-cli/bin/run --version
-        node_modules/sfdx-cli/bin/run plugins --core
+      run: npm install sfdx-cli -g
+      run: sfdx --version
+      run: sfdx plugins --core
       
     - name: Authenticate sandbox
-      run: |
-        node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f ${{ secrets.PORTALVALI_URL }} -s -a PortalVali
+      run: sfdx force:auth:sfdxurl:store -f ${{ secrets.PORTALVALI_URL }} -s -a PortalVali
 
     - name: Deploy source
-      run: node_modules/sfdx-cli/bin/run force:source:deploy -p force-app -u PortalVali -c -t
+      run: sfdx force:source:deploy -p force-app -u PortalVali -c -t
 
     - name: Run Apex test
-      run: node_modules/sfdx-cli/bin/run force:apex:test:run -c -r human
+      run: sfdx force:apex:test:run -c -r human
 
