--- a/.github/workflows/Portal_Dev.yml
+++ b/.github/workflows/Portal_Dev.yml
@@ -24,7 +24,7 @@ jobs:
         sfdx force:auth:sfdxurl:store -f /tmp/sfdx.url -s -a PortalVali
 
     - name: Deploy source
-      run: sfdx force:source:deploy -p force-app -u PortalVali -c -t
+      run: sfdx force:source:deploy -p force-app -u PortalVali -c 
 
     - name: Run Apex test
       run: sfdx force:apex:test:run -c -r human
