--- a/.github/workflows/Portal_Dev.yml
+++ b/.github/workflows/Portal_Dev.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: apexScanResults.sarif
+        sarif_file: Scanresult/apexScanResults.sarif
 
 
 
