--- a/.github/workflows/Portal_Dev.yml
+++ b/.github/workflows/Portal_Dev.yml
@@ -30,7 +30,10 @@ jobs:
 
     - name: 'Scan code'
       run: |
-          sfdx scanner:run --format sarif --target './**/*.cls' --category "Design,Best Practices,Performance" --outfile 'apexScanResults.sarif'  
+          mkdir Scanresult
+          cd Scanresult
+          sfdx scanner:run --format sarif --target './**/*.cls' --category "Design,Best Practices,Performance" --outfile 'apexScanResults.sarif'
+          cd ..  
             
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
