--- a/.github/workflows/INT_Sync.yml
+++ b/.github/workflows/INT_Sync.yml
@@ -1,7 +1,7 @@
 #.github/workflows/INT_Sync.yml
 name: INT sync project
 on: 
-  pull_request:
+  push:
       branches: [Integration]
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
         node-version: '14.x'
 
     - name: Create pull request from INT to MDM project
-      run: run: gh pr create -B MDM_Dev -H Integration --title 'Merge Integration into MDM_Dev' --body 'Created by Github action'
+      run: gh pr create -B MDM_Dev -H Integration --title 'Merge Integration into MDM_Dev' --body 'Created by Github action'
 
     - name: Create pull request from INT to Maps project
-      run: run: gh pr create -B Maps_Dev -H Integration --title 'Merge Integration into Maps_Dev' --body 'Created by Github action'
+      run: gh pr create -B Maps_Dev -H Integration --title 'Merge Integration into Maps_Dev' --body 'Created by Github action'
