update back merge

--- a/.github/workflows/INT_Sync.yml
+++ b/.github/workflows/INT_Sync.yml
@@ -17,9 +17,9 @@ jobs:
     - name: Create pull request from INT to MDM project
       run: gh pr create -B MDM_Dev -H Integration --title 'Merge Integration into MDM_Dev' --body 'Created by Github action'
       env:
-          GITHUB_TOKEN: ${{ secrets.CLI_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create pull request from INT to Maps project
       run: gh pr create -B Maps_Dev -H Integration --title 'Merge Integration into Maps_Dev' --body 'Created by Github action'
       env:
-          GITHUB_TOKEN: ${{ secrets.CLI_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
