--- a/.github/workflows/INT_Sync.yml
+++ b/.github/workflows/INT_Sync.yml
@@ -8,11 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-      if: github.event.action == 'opened' || github.event.action == 'synchronize'
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '14.x'
+    - name: Check out repository code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: Integration
 
     - name: Create pull request from INT to MDM project
       run: gh pr create -B MDM_Dev -H Integration --title 'Merge Integration into MDM_Dev' --body 'Created by Github action'
